--- a/test.html
+++ b/test.html
@@ -6,14 +6,7 @@
 	</title>
 </head>
 <body>
-	Hello, World!
-
-
-	I am adding a  new line.
-	New feature
-
-	Again  a new feature 
-	Yo
+	This is a feature branch
 
 </body>
 </html>
